# codex-manager-v3

./: .gitignore  README.md  config.example.yaml  proxies.txt  pyproject.toml
plan/: outlook.py
src/: accounts.py  config.py  db.py  main.py  proxy_pool.py  settings_db.py  upload.py
src/browser/: __init__.py  engine.py  helpers.py  oauth.py  register.py
src/mail/: __init__.py  base.py  gptmail.py  imap.py  npcmail.py  outlook.py  yydsmail.py
src/webui/: server.py
test/: test_birthday_segment_detection.py  test_gptmail_parsing.py  test_outlook_graph_fallback.py  test_register_existing_account_detection.py  test_register_otp_retry.py
webui_frontend/: index.html  package-lock.json  package.json  vite.config.js
webui_frontend/src/: App.jsx  index.css
webui_frontend/src/components/: Badge.jsx  Layout.jsx
webui_frontend/src/lib/: api.js
webui_frontend/src/pages/: Accounts.jsx  Dashboard.jsx  Jobs.jsx  Proxies.jsx  Settings.jsx
